--- a/HomeAutomationLibraries-master/HomeAutomationProtocoll/HomeAutomationProtocoll.csproj
+++ b/HomeAutomationLibraries-master/HomeAutomationProtocoll/HomeAutomationProtocoll.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
+    <AssemblyVersion>1.0.0.1</AssemblyVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
 
 </Project>
